--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
 FROM golang:1.18
-WORKDIR /go/src/go-fiber-api-docker
+WORKDIR /go/src/todo-docker
 COPY . .
-RUN go build -o bin/server cmd/main.go
+RUN go build -o bin/server ./main.go
 CMD ["./bin/server"]
