--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
-PORT=:3000
-DB_HOST=postgres
-DB_PORT=5432
-DB_USER=user
-DB_PASS=password
-DB_NAME=todo
+DB_HOST=postgresdb
+DB_DRIVER=postgres
+DB_USER=supser
+DB_PASSWORD=SPuser96
+DB_NAME=tododb
+DB_PORT=5433
+
+# Postgres Test
+TEST_DB_HOST=postgres_test
+TEST_DB_DRIVER=postgres
+TEST_DB_USER=spuser
+TEST_DB_PASSWORD=SPuser96
+TEST_DB_NAME=tododb
+TEST_DB_PORT=5433
