--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,32 @@
-FROM golang:1.18
-WORKDIR /go/src/todo-docker
+# Start from golang base image
+FROM golang:alpine AS base
+FROM centos
+# Setup folders
+RUN mkdir /app
+WORKDIR /app
+
+# Install git.
+# Git is required for fetching the dependencies.
+RUN apk update && apk add --no-cache git && apk add --no-cach bash && apk add build-base
+
+# Add Maintainer info
+LABEL maintainer="Ali Saoud"
+
+# Copy the source from the current directory to the working Directory inside the container
 COPY . .
-RUN go build -o bin/server ./main.go
-CMD ["./bin/server"]
+COPY .env .
+
+# Download all the dependencies
+RUN go get -d -v ./...
+
+# Install the package
+RUN go install -v ./...
+
+# Build the Go app
+RUN go build -o /build
+
+# Expose port 8080 to the outside world
+EXPOSE 3001
+
+# Run the executable
+CMD [ "/build" ]
