--- a/.env
+++ b/.env
@@ -1,14 +1,27 @@
-DB_HOST=postgresdb
+# Postgres Live
+DB_HOST=learning-postgres                      
+# DB_HOST=127.0.0.1                             # when running the app without docker 
 DB_DRIVER=postgres
+API_SECRET=2022todoapp                            # Used for creating a JWT. Can be anything 
 DB_USER=supser
-DB_PASSWORD=SPuser96
-DB_NAME=tododb
-DB_PORT=5433
+DB_PASSWORD=password
+DB_NAME=tasks
+DB_PORT=5432 
+
+# Used by pgadmin service 
+PGADMIN_DEFAULT_EMAIL=maintainer
+PGADMIN_DEFAULT_PASSWORD=pass4DB1!
 
 # Postgres Test
-TEST_DB_HOST=postgres_test
+TEST_DB_HOST=learning-postgres_test                      
+# TEST_DB_HOST=127.0.0.1                        # when running the app without docker 
 TEST_DB_DRIVER=postgres
+TEST_API_SECRET=2022todoapp
 TEST_DB_USER=spuser
-TEST_DB_PASSWORD=SPuser96
-TEST_DB_NAME=tododb
-TEST_DB_PORT=5433
+TEST_DB_PASSWORD=password
+TEST_DB_NAME=Tasks_test
+TEST_DB_PORT=5432
+
+
+
+
