--- a/DockerFile
+++ b/DockerFile
@@ -1,32 +1,66 @@
 # Start from golang base image
-FROM golang:alpine AS base
-FROM centos
-# Setup folders
-RUN mkdir /app
-WORKDIR /app
+FROM golang:alpine as builder
 
-# Install git.
-# Git is required for fetching the dependencies.
-RUN apk update && apk add --no-cache git && apk add --no-cach bash && apk add build-base
+# Start from golang base image
+#FROM golang:alpine AS base
+
+
+#FROM golang:alpine as builder
+
+# ENV GO111MODULE=on
 
 # Add Maintainer info
 LABEL maintainer="Ali Saoud"
+
+
+# Install git.
+# Git is required for fetching the dependencies.
+#RUN apk update && apk add --no-cache git && apk add --no-cach bash && apk add build-base
+RUN apk update && apk add --no-cache git
+
+# Set the current working directory inside the container 
+#RUN mkdir /app
+WORKDIR /app
+
+# Copy go mod and sum files 
+COPY go.mod go.sum ./
+
+
+# Download all dependencies. Dependencies will be cached if the go.mod and the go.sum files are not changed 
+RUN go mod download 
+
+
+# Download all the dependencies
+#RUN go get -d -v ./...
+
+# Install the package
+#RUN go install -v ./...
+
+# Build the Go app
+#RUN go build -o /build
+
 
 # Copy the source from the current directory to the working Directory inside the container
 COPY . .
 COPY .env .
 
-# Download all the dependencies
-RUN go get -d -v ./...
-
-# Install the package
-RUN go install -v ./...
 
 # Build the Go app
-RUN go build -o /build
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
+
+# Start a new stage from scratch
+FROM alpine:latest
+RUN apk --no-cache add ca-certificates
+
+
+WORKDIR /root/
+
+# Copy the Pre-built binary file from the previous stage. Observe we also copied the .env file
+COPY --from=builder /app/main .
+COPY --from=builder /app/.env .       
 
 # Expose port 8080 to the outside world
 EXPOSE 3001
 
-# Run the executable
-CMD [ "/build" ]
+#Command to run the executable
+CMD ["./main"]
