--- a/.env
+++ b/.env
@@ -23,5 +23,24 @@ TEST_DB_NAME=Tasks_test
 TEST_DB_PORT=5432
 
 
-
+# See MW Fiber Session config: https://docs.gofiber.io/api/middleware/session
+# Options: "memory", "memcache", "mysql", "postgresql", "mongodb", "redis", "sqlite3"
+MW_FIBER_SESSION_STORAGE_PROVIDER="redis"
+MW_FIBER_SESSION_STORAGE_HOST="localhost"
+MW_FIBER_SESSION_STORAGE_PORT=6379
+MW_FIBER_SESSION_STORAGE_TLS_ENABLED=false
+MW_FIBER_SESSION_STORAGE_USERNAME=""
+MW_FIBER_SESSION_STORAGE_PASSWORD=""
+MW_FIBER_SESSION_STORAGE_DATABASE="0"
+MW_FIBER_SESSION_STORAGE_TABLE="sessions"
+MW_FIBER_SESSION_COOKIENAME="session_id"
+MW_FIBER_SESSION_COOKIEDOMAIN=""
+MW_FIBER_SESSION_COOKIEPATH=""
+MW_FIBER_SESSION_COOKIEHTTPONLY=false
+# Options: "Lax", "Strict", "None"
+MW_FIBER_SESSION_COOKIESAMESITE="Lax"
+MW_FIBER_SESSION_STORAGE_RESET=false
+MW_FIBER_SESSION_COOKIESECURE=true
+MW_FIBER_SESSION_EXPIRATION="24h"
+MW_FIBER_SESSION_STORAGE_GCINTERVAL="10s"
 
